--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-js-pagination": "^3.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-toastify": "^5.3.2",
     "simple-react-validator": "^1.2.2"
   },
   "scripts": {
