--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "should": "^13.2.3",
+    "supertest": "^4.0.2"
   }
 }
